--- a/CODBO4.csproj
+++ b/CODBO4.csproj
@@ -45,11 +45,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API.cs" />
-    <Compile Include="CODException.cs" />
-    <Compile Include="Models\Leaderboards.cs" />
+    <Compile Include="Models\Leaderboard.cs" />
+    <Compile Include="Models\Match.cs" />
+    <Compile Include="Models\RecentMatches.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Models\Validate.cs" />
     <Compile Include="Models\Profile.cs" />
-    <Compile Include="Scope.cs" />
+    <Compile Include="Modes.cs" />
+    <Compile Include="Scopes.cs" />
     <Compile Include="Platforms.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities.cs" />
