--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,18 @@
 root = true
 
-[{.*,*.cs}]
+[{.*,*.md,*.cs,*.csproj,*.sln}]
 charset = utf-8
 end_of_line = lf
 indent_size = 4
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[{*.md,*.csproj}]
+indent_size = 2
+
+[*.sln]
+indent_style = tab
 
 [*.cs]
 #### .NET Coding Conventions ####
